Fixed remaining right margin alignment issues, page fits into screen without scroll -CMS

--- a/public/css/ux_style.css
+++ b/public/css/ux_style.css
@@ -22,12 +22,12 @@ body {
 .page {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
 }
 
 .add-btn {
-    margin-left: 45vw;
-    margin-top: 66px;
+    /* margin-left: 45vw; */
+    margin-left: auto;
+    margin-top: 29px;
     height: 43px;
     width: 210px;
     border-radius: 21.5px;
@@ -40,7 +40,27 @@ body {
     line-height: 20px;
     text-align: center;
     background: var(--button);
-    
+}
+
+.top-header {
+    display: flex;
+    flex-direction: row;
+    /* width: 100%; */
+    /* height: 200px; */
+    padding: 48px;
+}
+
+.date {
+    color: var(--text);
+    font-family: "Proxima Nova Thin";
+    font-size: 35px;
+    font-weight: 300;
+    letter-spacing: 0;
+    line-height: 42px;
+    margin-top: 29px;
+
+    height: 42px;
+    /* width: 100% */
 }
 
 .tabcontent {
@@ -67,8 +87,9 @@ body {
 
 section.sidebar {
     display: flex;
-    flex-direction: column;
-    min-width: 320px;
+    flex: 0 0 320px;
+    flex-flow: column nowrap;
+    /* min-width: 320px; */
     height: 1024px;
     background-color: var(--highlight);
 }
@@ -151,36 +172,17 @@ section.sidebar {
     height: 100%;
 }
 
-.top-header {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 200px;
-}
-
-.date {
-    color: var(--text);
-    font-family: "Proxima Nova Thin";
-    font-size: 35px;
-    font-weight: 300;
-    letter-spacing: 0;
-    line-height: 42px;
-    margin-top: 77px;
-    margin-left: 48px;
-    height: 42px;
-    /* width: 100% */
-}
-
 .chore-counter {
     display: flex;
     flex-direction: row;
+    padding: 16px;
 }
 
 .completed-container {
     height: 208px;
     border-radius: 12px;
     background-color: var(--highlight);
-    margin-top: 64px;
+    /* margin-top: 16px; */
     margin-left: 48px;
 }
 
@@ -211,7 +213,7 @@ section.sidebar {
     width: 285px;
     border-radius: 12px;
     background-color: var(--highlight);
-    margin-top: 64px;
+    /* margin-top: 64px; */
     margin-left: 69px;
 }
 
@@ -251,7 +253,7 @@ section.sidebar {
 }
 
 .chore {
-    width: 93%;
+    /* width: 100%; */
     padding: 48px;
 }
 
